# bramble

./: .gitignore  README.md  config.yaml  justfile  main.py  pyproject.toml
src/bramble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/signage/: __init__.py  cli.py  config.py  media_manager.py  player.py  scheduler.py  setup_manager.py
